--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
     <link rel="stylesheet" href="../natours/assets/styles.css">
     <title>NaTours</title>
 </head>
 <body>
     <header class="header">
-        Lorem ipsum dolor sit amet.
+        <div class="logo-box">
+            <img src="" alt="" srcset="">
+        </div>
     </header>
     
 </body>
