added textbox and logobox class to further control css

--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
-    <link rel="stylesheet" href="../natours/assets/styles.css">
+    <link rel="stylesheet" href="./assets/styles.css">
     <title>NaTours</title>
 </head>
 <body>
     <header class="header">
         <div class="logo-box">
-            <img src="" alt="" srcset="">
+            <img src="./assets/img/logo-green-1x.png" alt="Logo" class="logo" srcset="">
+        </div>
+        <div class="text-box">
+            <h1 class="heading-primary">
+                <span class="heading-primary-main">Outdoors</span>
+                <span class="heading-primary-sub">is where life happens</span>
+            </h1>
         </div>
     </header>
     
