--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 <body>
     <header class="header">
         <div class="logo-box">
-            <img src="./assets/img/logo-green-1x.png" alt="Logo" class="logo" srcset="">
+            <img src="./assets/img/logo-white.png" alt="Logo" class="logo" srcset="">
         </div>
         <div class="text-box">
             <h1 class="heading-primary">
                 <span class="heading-primary-main">Outdoors</span>
                 <span class="heading-primary-sub">is where life happens</span>
             </h1>
+            <a href="#0" class="btn btn-white">Discover our tours</a>
         </div>
     </header>
     
