--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <span class="heading-primary-main">Outdoors</span>
                 <span class="heading-primary-sub">is where life happens</span>
             </h1>
-            <a href="#0" class="btn btn-white">Discover our tours</a>
+            <a href="#0" class="btn btn-white btn-animated">Discover our tours</a>
         </div>
     </header>
     
