--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
             <a href="#0" class="btn btn--white btn--animated">Discover our tours</a>
         </div>
     </header>
+    <main>
+        <section class="section-about">
+            <div class="u-center-text">
+                <h2 class="heading-secondary">
+                    Exciting tours for adventurous people.
+                </h2>
+            </div>
+        </section>
+    </main>
 <!-- layout blueprints -->
     <!-- <section class="grid-test">
         <div class="row">
