--- a/index.html
+++ b/index.html
@@ -23,14 +23,21 @@
     </header>
     <main>
         <section class="section-about">
-            <div class="u-center-text u-margin-bottom-8">
+            <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                     Exciting tours for adventurous people.
                 </h2>
             </div>
             <div class="row">
                 <div class="col-1-of-2">
-                    Text Image   
+                    <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature.</h3>  
+                    <p class="paragraph">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem tempora facere voluptates doloremque consequuntur obcaecati hic sunt porro voluptatum at repudiandae sapiente similique accusantium, deleniti dolor non ipsum molestiae unde.
+                    </p>
+                    <h3 class="heading-tertiary u-margin-bottom-small">Live adventures like you never have before.</h3>  
+                    <p class="paragraph">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis dolore similique adipisci reprehenderit rerum tempore dolorem voluptatem non tempora enim?
+                    </p>
                 </div>
                 
                 <div class="col-1-of-2">
