--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/icon-font.css">
     <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
     <link rel="stylesheet" href="./assets/styles.css">
     <title>NaTours</title>
@@ -44,12 +45,57 @@
                  
                 <div class="col-1-of-2">
                     <div class="composition">
-                        <img src="./assets/img/nat-1.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
-                        <img src="./assets/img/nat-2.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
-                        <img src="./assets/img/nat-3.jpg" alt="Photo 3" class="composition__photo composition__photo--p3"><
-                            /div>
+                        <img src="./assets/img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
+                        <img src="./assets/img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
+                        <img src="./assets/img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+                    </div>
                 </div>
             </div>
+        </section>
+        <section class="section-features">
+            
+            <div class="row">
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-world"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
+                        <p class="feature-box__text">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias cumque 
+                        </p>
+                    </div>      
+                </div>
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-compass"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Meet nature</h3>
+                        <p class="feature-box__text">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias cumque 
+                        </p>
+                    </div>      
+                </div>
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-map"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Find your way</h3>
+                        <p class="feature-box__text">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias cumque 
+                        </p>
+                    </div>      
+                </div>
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-heart"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Live a healthier life.</h3>
+                        <p class="feature-box__text">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias cumque 
+                        </p>
+                    </div>      
+                </div>
+
+
+            </div>
+
+
         </section>
     </main>
 <!-- layout blueprints -->
