--- a/index.html
+++ b/index.html
@@ -103,7 +103,16 @@
                 <div class="col-1-of-3">
                     <div class="card">
                        <div class="card__side card__side--front card__side--front-1">
-                           FRONT
+                           <div class="card__picture card__picture--1">
+                            Lorem ipsum dolor sit amet.
+                           </div>
+                           <div class="card__heading">
+                               Heading
+
+                           </div>
+                           <div class="card__details">
+                               Details
+                           </div>
                        </div>
                        <div class="card__side card__side--back card__side--back-1">
                            BACK
