--- a/index.html
+++ b/index.html
@@ -104,12 +104,15 @@
                     <div class="card">
                        <div class="card__side card__side--front card__side--front-1">
                            <div class="card__picture card__picture--1">
-                            Lorem ipsum dolor sit amet.
+                            
                            </div>
-                           <div class="card__heading">
-                               Heading
+                           <h4 class="card__heading">
+                               <span class="card__heading-span card__heading-span--1">
+                                The Sea Explorer
+                               </span>
+                               
 
-                           </div>
+                           </h4>
                            <div class="card__details">
                                Details
                            </div>
