new margin helper class added

--- a/index.html
+++ b/index.html
@@ -200,6 +200,9 @@
                      </div> 
                 </div>
             </div>
+            <div class="u-center-text u-margin-bottom-top">
+                <a href="#0" class="btn">Discover all tours</a>
+            </div>
 
         </section>
     </main>
