fixed bug in css, hero button had green in ::after psuedoclass, error in {} placement

--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
                      </div> 
                 </div>
             </div>
-            <div class="u-center-text u-margin-bottom-top">
-                <a href="#0" class="btn">Discover all tours</a>
+            <div class="u-center-text u-margin-bottom-top-huge">
+                <a href="#0" class="btn btn--green">Discover all tours</a>
             </div>
 
         </section>
