added story section and styling effects to first story. some bug with google effecting clip-path property, fine in incognito

--- a/index.html
+++ b/index.html
@@ -205,6 +205,26 @@
             </div>
 
         </section>
+        <section class="section-stories">
+            <div class="u-center-text u-margin-bottom-big">
+                <h2 class="heading-secondary">
+                    We make people genuinely happy.
+                </h2>
+            </div>
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="./assets/img/nat-8.jpg" alt="Person on a Tour" class="story__img">
+
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u-margin-bottom-small">I had the best week with my family</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos neque sunt cumque? Perferendis ipsum corporis blanditiis quas alias nobis soluta fugiat consequatur quos culpa. Nemo odio sint maiores, porro impedit dolores vel natus. Voluptatem atque aperiam, veniam repellat cupiditate vitae iure sapiente voluptate velit provident suscipit recusandae, adipisci reprehenderit commodi?</p>
+                        
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 <!-- layout blueprints -->
     <!-- <section class="grid-test">
