story section completely with cool bg video

--- a/index.html
+++ b/index.html
@@ -206,6 +206,13 @@
 
         </section>
         <section class="section-stories">
+            <div class="bg-video">
+                <video class="bg-video__content" autoplay muted loop>
+                    <source src="./assets/img/video.mp4" type="video/mp4">
+                    <source src="./assets/img/video.webm" type="video/webm">
+                    Your browser does not support video playback 💩💩💩
+                </video>
+            </div>
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                     We make people genuinely happy.
@@ -215,6 +222,7 @@
                 <div class="story">
                     <figure class="story__shape">
                         <img src="./assets/img/nat-8.jpg" alt="Person on a Tour" class="story__img">
+                        <figcaption class="story__caption">Mary Smith</figcaption>
 
                     </figure>
                     <div class="story__text">
@@ -223,6 +231,22 @@
                         
                     </div>
                 </div>
+            </div>
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="./assets/img/nat-9.jpg" alt="Person on a Tour" class="story__img">
+                        <figcaption class="story__caption">Jack Wilson</figcaption>
+
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u-margin-bottom-small">Wow! My life is completely different now</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos neque sunt cumque? Perferendis ipsum corporis blanditiis quas alias nobis soluta fugiat consequatur quos culpa. Nemo odio sint maiores, porro impedit dolores vel natus. Voluptatem atque aperiam, veniam repellat cupiditate vitae iure sapiente voluptate velit provident suscipit recusandae, adipisci reprehenderit commodi?</p>
+                    </div>
+                </div>
+            </div>
+            <div class="u-center-text u-margin-top-huge">
+                <a href="#0" class="btn-text">Read all stories &rarr;</a>
             </div>
         </section>
     </main>
