updated button, kind of weird

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     <source src="./assets/img/video.mp4" type="video/mp4">
                     <source src="./assets/img/video.webm" type="video/webm">
                     Your browser does not support video playback 💩💩💩
-                </video>
+                 </video>
             </div>
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
@@ -249,8 +249,15 @@
                 <a href="#0" class="btn-text">Read all stories &rarr;</a>
             </div>
         </section>
+        <section class="section-book">
+            <div class="row">
+                <div class="book">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis distinctio facere excepturi illum culpa eius, accusamus unde consequatur aspernatur.
+                </div>
+            </div>
+        </section>
     </main>
-<!-- layout blueprints -->
+<!-- layout blueprints --> 
     <!-- <section class="grid-test">
         <div class="row">
             <div class="col-1-of-2">
