navigation nearly completed

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <div class="navigation__background">&nbsp;</div>
         <nav class="navigation__nav">
             <ul class="navigation__list">
-                <li class="navigation__item"><a href="#0" class="navigation__link">About NaTours</a></li>
-                <li class="navigation__item"><a href="#0" class="navigation__link">Your benefits</a></li>
-                <li class="navigation__item"><a href="#0" class="navigation__link">Popular tours</a></li>
-                <li class="navigation__item"><a href="#0" class="navigation__link">Stories</a></li>
-                <li class="navigation__item"><a href="#0" class="navigation__link">Book now</a></li>
+                <li class="navigation__item"><a href="#0" class="navigation__link"><span>01&nbsp;</span>About NaTours</a></li>
+                <li class="navigation__item"><a href="#0" class="navigation__link"><span>02&nbsp;</span>Your benefits</a></li>
+                <li class="navigation__item"><a href="#0" class="navigation__link"><span>03&nbsp;</span>Popular tours</a></li>
+                <li class="navigation__item"><a href="#0" class="navigation__link"><span>04&nbsp;</span>Stories</a></li>
+                <li class="navigation__item"><a href="#0" class="navigation__link"><span>05&nbsp;</span>Book now</a></li>
             </ul>
         </nav>
 
