--- a/index.html
+++ b/index.html
@@ -331,6 +331,11 @@
             </div>
         </div>
     </footer>
+    <div class="popup">
+        <div class="popup__content">
+            POPUP
+        </div>
+    </div>
 <!-- layout blueprints --> 
     <!-- <section class="grid-test">
         <div class="row">
