pictures, header elements, content and button added to popup component

--- a/index.html
+++ b/index.html
@@ -333,7 +333,20 @@
     </footer>
     <div class="popup">
         <div class="popup__content">
-            POPUP
+            <div class="popup__left">
+                <img src="./assets/img/nat-8.jpg" alt="Tour photo" class="popup__img">
+                <img src="./assets/img/nat-9.jpg" alt="Tour photo" class="popup__img">
+                
+            </div>
+            <div class="popup__right">
+                <h2 class="heading-secondary">Start booking now</h2>
+                <h3 class="heading-tertiary">Important &ndash; Please read these terms before booking</h3>
+                <p class="popup__text">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad explicabo recusandae nulla soluta expedita, consectetur quia iure cupiditate quasi cum quis maiores vitae, dolores nam veniam ipsum fugit, praesentium quidem.
+                </p>
+                <a href="#0" class="btn btn--green">Book now</a>
+
+            </div>
         </div>
     </div>
 <!-- layout blueprints --> 
