mixin and popup component layout functioning properly

--- a/index.html
+++ b/index.html
@@ -339,10 +339,10 @@
                 
             </div>
             <div class="popup__right">
-                <h2 class="heading-secondary">Start booking now</h2>
-                <h3 class="heading-tertiary">Important &ndash; Please read these terms before booking</h3>
+                <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+                <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
                 <p class="popup__text">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad explicabo recusandae nulla soluta expedita, consectetur quia iure cupiditate quasi cum quis maiores vitae, dolores nam veniam ipsum fugit, praesentium quidem.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quas nisi cupiditate repellendus culpa aperiam, aut vitae quaerat consectetur ad eaque natus cumque assumenda ipsum doloremque doloribus nesciunt voluptatibus dicta incidunt? Officiis, culpa nemo. Provident quo veniam magni enim, a unde sequi voluptate nam tempora, cupiditate hic rerum aliquam! Quae!
                 </p>
                 <a href="#0" class="btn btn--green">Book now</a>
 
