--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <span class="heading-primary--main">Outdoors</span>
                 <span class="heading-primary--sub">is where life happens</span>
             </h1>
-            <a href="#0" class="btn btn--white btn--animated">Discover our tours</a>
+            <a href="#section-tours" class="btn btn--white btn--animated">Discover our tours</a>
         </div>
     </header>
     <main>
@@ -110,7 +110,7 @@
                 </div>
             </div>
         </section>
-        <section class="section-tours">
+        <section class="section-tours" id="section-tours">
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                     Most popular tours.
@@ -144,7 +144,7 @@
                                    <p class="card__price-only">Only</p>
                                    <p class="card__price-value">$297</p>
                                </div>
-                               <a href="#0" class="btn btn--white">Book Now!</a>
+                               <a href="#popup" class="btn btn--white">Book Now!</a>
                            </div>
                        </div>
                     </div>   
@@ -177,7 +177,7 @@
                                    <p class="card__price-only">Only</p>
                                    <p class="card__price-value">$297</p>
                                </div>
-                               <a href="#0" class="btn btn--white">Book Now!</a>
+                               <a href="#popup" class="btn btn--white">Book Now!</a>
                            </div>
                        </div>
                     </div> 
@@ -211,7 +211,7 @@
                                     <p class="card__price-only">Only</p>
                                     <p class="card__price-value">$297</p>
                                 </div>
-                                <a href="#0" class="btn btn--white">Book Now!</a>
+                                <a href="#popup" class="btn btn--white">Book Now!</a>
                             </div>
                         </div>
                      </div> 
@@ -331,7 +331,7 @@
             </div>
         </div>
     </footer>
-    <div class="popup">
+    <div class="popup" id="popup">
         <div class="popup__content">
             <div class="popup__left">
                 <img src="./assets/img/nat-8.jpg" alt="Tour photo" class="popup__img">
@@ -339,6 +339,7 @@
                 
             </div>
             <div class="popup__right">
+                <a href="#section-tours" class="popup__close">&times;</a>
                 <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
                 <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
                 <p class="popup__text">
